# lazy_env_configurator

./: .env.test  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_env_configurator.py  tox.ini
.github/workflows/: python-app.yml
lazy_env_configurator/: __init__.py  custom_warnings.py  env.py  validations.py
tests/: test_contained_values.py  test_eager_validation.py  test_env_configurator.py  test_invalid_env_file.py  test_invalid_iterable.py
